[APPDEV-3770] Global Nav Drop Down Menu - Formatting Rules [APPDEV-3771] Global Nav - Super Department submenu formatting rules    fix for [APPBUG-2304]    updated rules for alignments and bottom-nav sizing, see APPDEV-3770    removed missing drop-shadow image in css
git-svn-id: https://appdevsvn.nj01/appdev/FreshDirect/trunk@28150 842219ff-9341-0410-a943-573460bdd4de

--- a/projects/Media/docroot/assets/css/common/globalnav.css
+++ b/projects/Media/docroot/assets/css/common/globalnav.css
@@ -274,6 +274,11 @@ nav.globalnav {
     color: #748658;
 }
 
+.bottom-nav .bottom-nav-items .bottom-item {
+	height: 41px;
+	line-height: 41px;
+}
+
 .gnav-footer [data-highlight="on"]{
   background-color:#728d4b;
 }
